--- a/app/src/main/res/layout/profilepicselect_.xml
+++ b/app/src/main/res/layout/profilepicselect_.xml
@@ -7,9 +7,11 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         app:cardCornerRadius="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="10dp"
         app:cardElevation="0dp">
 
         <LinearLayout
@@ -25,15 +27,20 @@
                 android:layout_height="wrap_content"
                 android:text="Escolher novo ícone de perfil" />
 
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/picsrecycler"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:spanCount="2"
                 tools:listitem="@layout/pics_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
+
+            <include
+                android:id="@+id/not_found_include"
+                layout="@layout/empty_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
 
         </LinearLayout>
