--- a/app/src/main/res/layout/quote_header_view.xml
+++ b/app/src/main/res/layout/quote_header_view.xml
@@ -17,6 +17,8 @@
 
         <include
             android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/quotesRecycler"
             layout="@layout/quote_recycler" />
 
