--- a/app/src/main/res/anim/bounce.xml
+++ b/app/src/main/res/anim/bounce.xml
@@ -3,7 +3,7 @@
 
     <scale
         android:duration="200"
-        android:fillAfter="false"
+        android:fillAfter="true"
         android:fromXScale="1"
         android:fromYScale="1"
         android:interpolator="@android:anim/linear_interpolator"
