--- a/app/src/main/res/layout/quotescard.xml
+++ b/app/src/main/res/layout/quotescard.xml
@@ -5,134 +5,120 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-
-    <LinearLayout
-        android:id="@+id/card"
-        android:padding="4dp"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/quoteCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp"
         android:animateLayoutChanges="true"
-        android:hapticFeedbackEnabled="true"
-        android:orientation="vertical">
+        android:elevation="@dimen/cardview_default_elevation"
+        android:foreground="?attr/selectableItemBackground"
+        android:orientation="vertical"
+        android:stateListAnimator="@animator/list_animator"
+        app:cardBackgroundColor="?android:textColorHint"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="0dp">
 
-
-        <com.google.android.material.card.MaterialCardView
-            android:elevation="@dimen/cardview_default_elevation"
-            android:animateLayoutChanges="true"
-            android:id="@+id/background"
-            android:stateListAnimator="@animator/list_animator"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:foreground="?attr/selectableItemBackground"
-            android:orientation="vertical"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="0dp"
-            tools:backgroundTint="@color/colorAccent">
+            android:orientation="vertical">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/fade_gradient"
-                    android:orientation="vertical"
-                    android:padding="8dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:id="@+id/quoteDate"
-                        style="@style/TextAppearance.MaterialComponents.Caption"
-                        android:layout_alignParentEnd="true"
-                        android:layout_height="wrap_content"
-                        android:padding="8dp"
-                        android:textColor="@color/white"
-                        tools:text="10 de Outubro de 2019" />
-
-                    <include
-                        android:id="@+id/userTop"
-                        android:layout_centerInParent="true"
-                        android:layout_toStartOf="@id/quoteDate"
-                        layout="@layout/user_quote_card_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-
-                </RelativeLayout>
-
+                android:background="@drawable/fade_gradient"
+                android:orientation="vertical"
+                android:padding="8dp">
 
                 <TextView
-
-                    android:id="@+id/quoteTextView"
-                    android:layout_width="match_parent"
+                    android:id="@+id/quoteDate"
+                    style="@style/TextAppearance.MaterialComponents.Caption"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
                     android:padding="8dp"
-                    android:textStyle="bold"
-                    android:typeface="normal"
-                    tools:textColor="@color/white"
-                    tools:text="Everything I do \nI tell you all the time" />
+                    android:textColor="@color/white"
+                    tools:text="10 de Outubro de 2019" />
 
-                <TextView
-                    android:id="@+id/author_text_view"
+                <include
+                    android:id="@+id/userTop"
+                    layout="@layout/user_quote_card_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/transparent"
+                    android:layout_centerInParent="true"
+                    android:layout_toStartOf="@id/quoteDate" />
+
+
+            </RelativeLayout>
+
+
+            <TextView
+                android:id="@+id/quoteTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:textSize="@dimen/default_quote_size"
+                android:textStyle="bold"
+                android:typeface="normal"
+                tools:text="Everything I do \nI tell you all the time"
+                tools:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/author_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/transparent"
+                android:padding="8dp"
+                android:textSize="24sp"
+                android:textStyle="italic"
+                tools:text="Lana Del Rey"
+                tools:textColor="@color/white" />
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/fade_gradient_inversed"
+                android:padding="8dp">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/likers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerInParent="true"
+                    android:layout_toEndOf="@id/like"
+                    android:orientation="horizontal"
                     android:padding="8dp"
-                    android:textSize="24sp"
-                    android:textStyle="italic"
-                    tools:textColor="@color/white"
-                    tools:text="Lana Del Rey" />
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:itemCount="2"
+                    tools:listitem="@layout/user_picview" />
+
+                <CheckBox
+                    android:id="@+id/like"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerInParent="true"
+                    android:layout_gravity="center"
+                    android:background="@drawable/favoritecheck"
+                    android:button="@color/transparent" />
+            </RelativeLayout>
 
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/fade_gradient_inversed"
-                    android:padding="8dp">
+        </LinearLayout>
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:layout_width="wrap_content"
-                        android:id="@+id/likers"
-                        android:layout_alignParentEnd="true"
-                        android:layout_height="wrap_content"
-                        android:layout_toEndOf="@id/like"
-                        android:orientation="horizontal"
-                        android:layout_centerInParent="true"
-                        android:padding="8dp"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        tools:itemCount="2"
-                        tools:listitem="@layout/user_picview" />
-
-                    <CheckBox
-                        android:id="@+id/like"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_centerInParent="true"
-                        android:layout_gravity="center"
-                        android:background="@drawable/favoritecheck"
-                        android:button="@color/transparent" />
-                </RelativeLayout>
-
-
-            </LinearLayout>
-
-            <com.budiyev.android.circularprogressbar.CircularProgressBar
-                android:id="@+id/loading"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_gravity="bottom|end"
-                android:layout_margin="10dp"
-                android:visibility="gone"
-                app:foregroundStrokeColor="@color/colorAccent"
-                app:indeterminate="true" />
-        </com.google.android.material.card.MaterialCardView>
-
-
-
-    </LinearLayout>
+        <com.budiyev.android.circularprogressbar.CircularProgressBar
+            android:id="@+id/loading"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="10dp"
+            android:visibility="gone"
+            app:foregroundStrokeColor="@color/colorAccent"
+            app:indeterminate="true" />
+    </com.google.android.material.card.MaterialCardView>
 
 
 </layout>
