--- a/app/src/main/res/layout/user_picview.xml
+++ b/app/src/main/res/layout/user_picview.xml
@@ -1,29 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
     </data>
 
-    <com.facebook.shimmer.ShimmerFrameLayout
-        android:layout_marginStart="-20dp"
-        android:layout_marginTop="0dp"
-        android:clipToPadding="false"
-        android:elevation="0dp"
-        android:id="@+id/picShimmer"
-        app:shimmer_colored="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/userpic"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:src="@drawable/notfound"
-            tools:src="@drawable/notfound" />
-    </com.facebook.shimmer.ShimmerFrameLayout>
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/userpic"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/ic_saturn_and_other_planets_primary"
+        app:civ_circle_background_color="?android:textColorHint" />
 
 
 </layout>
