fixed bug that made references cards dissapear

--- a/app/src/main/res/layout/quote_recycler.xml
+++ b/app/src/main/res/layout/quote_recycler.xml
@@ -5,12 +5,12 @@
 
 
     <RelativeLayout
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:gravity="start">
+        android:layout_marginTop="10dp">
 
         <androidx.recyclerview.widget.RecyclerView
-            tools:visibility="gone"
+            tools:visibility="visible"
             android:visibility="gone"
             tools:listitem="@layout/quotescard"
             android:id="@+id/quotesrecyclerview"
